--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     draw = false
 ;
    Telegram.WebApp.onEvent('mainButtonClicked', function(){
-      tg.sendData("some string that we need to send"); 
+      
       let bob;
       canvas.toBlob(function(blob){
 	     var form = new FormData();
@@ -72,12 +72,14 @@
              $.ajax(settings).done(function (response) {
   		   var jx = JSON.parse(response);
 	           tg.MainButton.setText(jx.data.url);
+		   tg.sendData(jx.data.url); 
+		   tg.close();
 
 
             });
       },'image/png');
       
-      //tg.close();
+      //
       //при клике на основную кнопку отправляем данные в строковом виде
    });
 
