--- a/index.html
+++ b/index.html
@@ -41,17 +41,14 @@
    tg.MainButton.text = "Отправить"; //изменяем текст кнопки 
    tg.MainButton.setText("Отправить"); //изменяем текст кнопки иначе
    tg.MainButton.show()
-   function sayHi() {
-      if (tg.isExpanded === false) {
-         tg.expand();
-      }
-   }
-   setInterval(sayHi,10);
     let canvas = document.getElementById("canvas"),
     context = canvas.getContext("2d"),
     mouse = { x:0, y:0 },
     draw = false
-;
+; 
+   Telegram.WebApp.onEvent('viewportChanged', function(){
+	   tg.expand();
+   });
    Telegram.WebApp.onEvent('mainButtonClicked', function(){
       
       let bob;
