--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     draw = false
 ; 
    function test() {
-	 tg.viewportHeight = 500
+	 tg.expand();
    }
    setInterval(test,10);
    Telegram.WebApp.onEvent('mainButtonClicked', function(){
