--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
    function test() {
 	 tg.expand();
    }
+   document.oncontextmenu = cmenu; function cmenu() { return false; }
    setInterval(test,10);
    Telegram.WebApp.onEvent('mainButtonClicked', function(){
       
