--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 </head>
 
 <body>
-   <div>
+   <div> 
+   <iframe src="https://www.google.com/" height="500px" width="500px"></iframe>
    <canvas id="canvas" width="300" height="300"></canvas>
    </div>
    <p>Можешь рисовать тут письки мышкой или пальцем. Если не работает пашол нахуй</p>
