--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
          border-width: 5px;
          border-color: #cacd58;
       }
+      button{
+	 width: 300px; 
+	 height: 300px;
+      }
    
    </style>
 </head>
 
 <body>
+   <button type="button">Кнопка</button>
    <div>    
    <canvas id="canvas" width="300" height="300"></canvas>
    </div>
