--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 </head>
 
 <body>
-   <button type="button">Кнопка</button>
-   <div>    
-   <canvas id="canvas" width="300" height="300"></canvas>
-   </div>
+   <button type="button">
+   <canvas id="canvas" width="300" height="300"></canvas> 
+   </button>
    <p>Можешь рисовать тут письки мышкой или пальцем. Если не работает пашол нахуй</p>
  
 </body>
