--- a/index.html
+++ b/index.html
@@ -20,15 +20,19 @@
          border-style: solid;
          border-width: 5px;
          border-color: #cacd58;
+	 position: relative;
       }
-   
+      button{
+	      width: 500px;
+	      height: 400px;
+	   }
    </style>
 </head>
 
 <body>
-   <button type="button">
+   <button type="button">Текст</button>
    <canvas id="canvas" width="300" height="300"></canvas> 
-   </button>
+   
    <p>Можешь рисовать тут письки мышкой или пальцем. Если не работает пашол нахуй</p>
  
 </body>
