--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
 	 position: relative;
       }
       button{
-	      width: 500px;
-	      height: 400px;
+	      width: 300px;
+	      height: 300px;
+	      position: relative;
 	   }
    </style>
 </head>
