--- a/index.html
+++ b/index.html
@@ -20,19 +20,24 @@
          border-style: solid;
          border-width: 5px;
          border-color: #cacd58;
-	 position: relative;
       }
       button{
 	      width: 300px;
 	      height: 300px;
-	      position: relative;
+	   }
+      div{
+	 position: relative;
 	   }
    </style>
 </head>
 
 <body>
+   <div>
    <button type="button">Текст</button>
-   <canvas id="canvas" width="300" height="300"></canvas> 
+   </div>
+   <div>
+   <canvas id="canvas" width="300" height="300"></canvas>  
+    </div>
    
    <p>Можешь рисовать тут письки мышкой или пальцем. Если не работает пашол нахуй</p>
  
