--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	      width: 300px;
 	      height: 300px;
 	   }
-      div{
+      .test{
 	 position: relative;
 	   }
    </style>
@@ -34,10 +34,11 @@
 <body>
    <div>
    <button type="button">Текст</button>
-   </div>
-   <div>
+   <div class="test">
    <canvas id="canvas" width="300" height="300"></canvas>  
     </div>
+   </div>
+   
    
    <p>Можешь рисовать тут письки мышкой или пальцем. Если не работает пашол нахуй</p>
  
