--- a/index.html
+++ b/index.html
@@ -25,20 +25,13 @@
 	      width: 300px;
 	      height: 300px;
 	   }
-      .test{
-	 position: relative;
-         top:-400px;
-	   }
+ 
    </style>
 </head>
 
 <body>
-   <div>
-   <button type="button">Текст</button>
-   <div class="test">
-   <canvas id="canvas" width="300" height="300"></canvas>  
-    </div>
-   </div>
+   <button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
+
    
    
    <p>Можешь рисовать тут письки мышкой или пальцем. Если не работает пашол нахуй</p>
