--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
          border-width: 5px;
          border-color: #cacd58;
       }
+      button{
+	 color:#cacd58;
+      }
       
  
    </style>
