--- a/index.html
+++ b/index.html
@@ -24,13 +24,16 @@
       button{
 	 color:#cacd58;
       }
+      div{
+	 overflow: scroll;
+      }
       
  
    </style>
 </head>
 
 <body>
-   <button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
+	<div><button type="button"><canvas id="canvas" width="300" height="300"></canvas></button></div>
 
    
    
