--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	<div><button type="button"><canvas id="canvas" width="300" height="300"></canvas></button></div>
 
    
-   
+   <input type="color">
    <p>Можешь рисовать тут письки мышкой или пальцем. Если не работает пашол нахуй</p>
  
 </body>
