--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 </head>
 
 <body>
-	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
+	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button></br>
 
 	<div><p>Выбери цвет:  </p>
    	<input type="color" id="select">
-	</div>
+	</div></br>
 	<div><p>Выбери толщину:  </p>
    	<select id="line">
    	<option value="1">1</option>
