--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
       button{
 	 color:#cacd58;
       }
-      div{
-	 display: flex;
-      }
       
  
    </style>
@@ -35,10 +32,10 @@
 <body>
 	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button></br>
 
-	<div><p>Выбери цвет:  </p>
+	<p>Выбери цвет:  </p>
    	<input type="color" id="select">
-	</div></br>
-	<div><p>Выбери толщину:  </p>
+	</br>
+	<p>Выбери толщину:  </p>
    	<select id="line">
    	<option value="1">1</option>
    	<option value="2">2</option>
@@ -47,7 +44,6 @@
    	<option value="16">16</option>
    	<option value="32">32</option>
    	</select>
-	</div>
   	 <p>Можешь рисовать тут письки мышкой или пальцем. Если не работает пашол нахуй</p>
  
 </body>
