--- a/index.html
+++ b/index.html
@@ -30,11 +30,10 @@
 </head>
 
 <body>
-	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button></br>
+	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
 
 	<p>Выбери цвет:  </p>
    	<input type="color" id="select">
-	</br>
 	<p>Выбери толщину:  </p>
    	<select id="line">
    	<option value="1">1</option>
@@ -44,7 +43,6 @@
    	<option value="16">16</option>
    	<option value="32">32</option>
    	</select>
-  	 <p>Можешь рисовать тут письки мышкой или пальцем. Если не работает пашол нахуй</p>
  
 </body>
 
