--- a/index.html
+++ b/index.html
@@ -30,10 +30,15 @@
 </head>
 
 <body>
+	
 	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
-
+        <table>  
+        <tr>
+        <th>
 	<p>Выбери цвет:  </p>
    	<input type="color" id="select">
+	</th>
+	<th>
 	<p>Выбери толщину:  </p>
    	<select id="line">
    	<option value="1">1</option>
@@ -43,6 +48,9 @@
    	<option value="16">16</option>
    	<option value="32">32</option>
    	</select>
+	</th>
+	</tr>
+	</table>
  
 </body>
 
