--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
       button{
 	 color:#cacd58;
       }
-      
+      table {
+      	border-collapse: collapse;
+      }
  
    </style>
 </head>
@@ -35,11 +37,11 @@
         <table>  
         <tr>
         <th>
-	<p>Выбери цвет:  </p>
+	<p>Цвет</p>
    	<input type="color" id="select">
 	</th>
 	<th>
-	<p>Выбери толщину:  </p>
+	<p>Толщина</p>
    	<select id="line">
    	<option value="1">1</option>
    	<option value="2">2</option>
