--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
 	
 	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
-        <table>  
+        <table cellspacing="20">  
         <tr>
         <th>
 	<p>Цвет                              </p>
