--- a/index.html
+++ b/index.html
@@ -16,6 +16,14 @@
          align-items: center;
          font-size: 18px;
       }
+      .a{
+	display: flex;
+        flex-direction: row;
+      }
+      .b{
+	display: flex;
+        flex-direction: column;
+      }
       canvas{
          border-style: solid;
          border-width: 5px;
@@ -32,10 +40,12 @@
 <body>
 	
 	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
-        
+        <div class="a">
+	<div class="b">
 	<p>Цвет</p>
    	<input type="color" id="select">
-	
+	</div>
+	<div class="b">
 	<p>Толщина</p>
    	<select id="line">
    	<option value="1">1</option>
@@ -45,6 +55,8 @@
    	<option value="16">16</option>
    	<option value="32">32</option>
    	</select>
+	</div>
+	</div>
  
 </body>
 
