--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 	display: flex;
         flex-direction: row;
       }
+      .c{
+	display: none;
+      }
       .b{
 	display: flex;
         flex-direction: column;
@@ -44,6 +47,9 @@
 	<div class="b">
 	<p>Цвет</p>
    	<input type="color" id="select">
+	</div>
+	<div class="c">
+	<p>Абоба</p>
 	</div>
 	<div class="b">
 	<p>Толщина</p>
