--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 	display: flex;
         flex-direction: row;
       }
-      .c{
-	display: none;
-      }
+
       .b{
 	display: flex;
         flex-direction: column;
@@ -48,8 +46,8 @@
 	<p>Цвет</p>
    	<input type="color" id="select">
 	</div>
-	<div class="c">
-	<p>Абоба</p>
+	<div class="b">
+	</br>
 	</div>
 	<div class="b">
 	<p>Толщина</p>
