--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
       .a{
 	display: flex;
         flex-direction: row;
+	margin: 0 -5px;
       }
 
       .b{
 	display: flex;
         flex-direction: column;
+	margin: 0 5px;
       }
       canvas{
          border-style: solid;
