--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
          flex-direction: column;
          align-items: center;
          font-size: 18px;
+	 text-align: center;
       }
       .a{
 	display: flex;
         flex-direction: row;
-	margin: 0 -5px;
+	margin: 0 -10px;
       }
 
       .b{
 	display: flex;
         flex-direction: column;
-	margin: 0 5px;
+	margin: 0 10px;
       }
       canvas{
          border-style: solid;
@@ -48,9 +49,7 @@
 	<p>Цвет</p>
    	<input type="color" id="select">
 	</div>
-	<div class="b">
-	</br>
-	</div>
+	
 	<div class="b">
 	<p>Толщина</p>
    	<select id="line">
