--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
    context.fillStyle = "white";
    context.fill();
    context.strokeStyle = "black";
- 
+   context.lineCap = "round";
    canvas.addEventListener("mousedown", function(e){
  
       let ClientRect = this.getBoundingClientRect();
