--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
    context.fillStyle = "white";
    context.fill();
    context.strokeStyle = "black";
+   context.lineCap = "round";
+   context.lineJoin = "round";
    canvas.addEventListener("mousedown", function(e){
  
       let ClientRect = this.getBoundingClientRect();
@@ -136,7 +138,6 @@
  
         mouse.x = e.clientX - ClientRect.left;
         mouse.y = e.clientY - ClientRect.top;
-        context.lineCap = "round";
         context.lineTo(mouse.x, mouse.y);
         context.stroke();
         
@@ -147,7 +148,6 @@ canvas.addEventListener("mouseup", function(e){
     let ClientRect = this.getBoundingClientRect();
     mouse.x = e.clientX - ClientRect.left;
     mouse.y = e.clientY - ClientRect.top;
-    context.lineCap = "round";
     context.lineTo(mouse.x, mouse.y);
     context.stroke();
     context.closePath();
@@ -173,7 +173,6 @@ canvas.addEventListener("touchstart", function(e){
  
         mouse.x = e.changedTouches[0].clientX - ClientRect.left;
         mouse.y = e.changedTouches[0].clientY - ClientRect.top;
-        context.lineCap = "round";
         context.lineTo(mouse.x, mouse.y);
         context.stroke();
         
@@ -184,7 +183,6 @@ canvas.addEventListener("touchend", function(e){
     let ClientRect = this.getBoundingClientRect();
     mouse.x = e.changedTouches[0].clientX - ClientRect.left;
     mouse.y = e.changedTouches[0].clientY - ClientRect.top;
-    context.lineCap = "round";
     context.lineTo(mouse.x, mouse.y);
     context.stroke();
     context.closePath();
