--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
          border-style: solid;
          border-width: 5px;
          border-color: #cacd58;
+	position: relative;
+	top: -300px;
       }
       button{
 	 color:#cacd58;
@@ -67,7 +69,7 @@
   <li class="item">9</li>
   <li class="item">10</li>
 </ul>
-	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
+	<canvas id="canvas" width="300" height="300"></canvas>
         <div class="a">
 	<div class="b">
 	<p>Цвет</p>
