--- a/index.html
+++ b/index.html
@@ -32,44 +32,18 @@
          border-style: solid;
          border-width: 5px;
          border-color: #cacd58;
-	position: relative;
-	top: -300px;
       }
       button{
 	 color:#cacd58;
       }
-	  .list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  height: 300px; width: 300px;
-  margin: 0; padding: 10px;
-  overflow-y: scroll;
-  font-size: 50px;
-  background-color: gold;
-}
-.list::-webkit-scrollbar {
-  width: 0;
-} 
  
  
    </style>
 </head>
 
 <body>
-	<ul class="list">
-  <li class="item">1</li>
-  <li class="item">2</li>
-  <li class="item">3</li>
-  <li class="item">4</li>
-  <li class="item">5</li>
-  <li class="item">6</li>
-  <li class="item">7</li>
-  <li class="item">8</li>
-  <li class="item">9</li>
-  <li class="item">10</li>
-</ul>
-	<canvas id="canvas" width="300" height="300"></canvas>
+	
+	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
         <div class="a">
 	<div class="b">
 	<p>Цвет</p>
@@ -92,19 +66,6 @@
 </body>
 
 <script>
-   const list = document.querySelector('.list');
-list.scrollTop = 1;
-list.addEventListener('scroll', function(ev) {
-  let items = this.querySelectorAll('.item');
-  if (parseInt(this.scrollTop) == 0) {
-    this.scrollTop = items[items.length - 1].clientHeight;
-    this.prepend(items[items.length - 1]);
-    this.scrollTop = 1;
-  } else if (this.scrollTop > this.scrollHeight - this.clientHeight - 1) {
-    this.append(items[0]);
-  }
-  return false;
-});
    let tg = window.Telegram.WebApp; //получаем объект webapp телеграма 
    tg.expand(); //расширяем на все окно  
    tg.MainButton.text = "Отправить"; //изменяем текст кнопки 
