--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
          align-items: center;
          font-size: 18px;
 	 text-align: center;
+	 overflow: hidden;
       }
       .a{
 	display: flex;
@@ -43,7 +44,7 @@
 
 <body>
 	
-	<button type="button"><canvas id="canvas" width="300" height="300"></canvas></button>
+	<canvas id="canvas" width="300" height="300"></canvas>
         <div class="a">
 	<div class="b">
 	<p>Цвет</p>
