--- a/index.html
+++ b/index.html
@@ -68,6 +68,12 @@
 </body>
 
 <script>
+   new fullpage('#fullpage', {
+	autoScrolling:false,
+	scrollHorizontally: false 
+   });
+   window.fullpage_api.setAllowScrolling(false);
+   window.fullpage_api.setKeyboardScrolling(false);
    let tg = window.Telegram.WebApp; //получаем объект webapp телеграма 
    tg.expand(); //расширяем на все окно  
    tg.MainButton.text = "Отправить"; //изменяем текст кнопки 
