--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <body>
 	
-	<iframe><canvas id="canvas" width="300" height="300"></canvas></iframe>
+	<canvas id="canvas" width="300" height="300"></canvas>
         <div class="a">
 	<div class="b">
 	<p>Цвет</p>
