--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </head>
 
 <body>
-	
+	<iframe width="300" height="300"></iframe><br>
 	<canvas id="canvas" width="300" height="300"></canvas>
         <div class="a">
 	<div class="b">
