--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 
 <body>
 	<iframe width="300" height="300"></iframe><br>
+	<iframe width="300" height="300"></iframe><br>
+	<iframe width="300" height="300"></iframe><br>
+	<iframe width="300" height="300"></iframe><br>
+	<iframe width="300" height="300"></iframe><br>
+	<iframe width="300" height="300"></iframe><br>
+	<iframe width="300" height="300"></iframe><br>
 	<canvas id="canvas" width="300" height="300"></canvas>
         <div class="a">
 	<div class="b">
@@ -80,7 +86,7 @@
     draw = false
 ; 
    function test() {
-	 tg.expand();
+	 window.scrollBy(0,0);
    }
    setInterval(test,10);
    Telegram.WebApp.onEvent('mainButtonClicked', function(){
